--- a/src/components/UI/Input.module.css
+++ b/src/components/UI/Input.module.css
@@ -1,12 +1,13 @@
 .input {
   display: flex;
+  justify-content: center;
   align-items: center;
   margin-bottom: 0.5rem;
 }
 
 .input label {
   font-weight: bold;
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
 }
 
 .input input {
