--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -3,8 +3,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 5rem;
-  background-color: #8a2b06;
+  /* height: 5rem; */
+  background-color: rgb(121, 14, 131);
   color: white;
   display: flex;
   justify-content: space-between;
@@ -17,14 +17,14 @@
 
 .main-image {
   width: 100%;
-  height: 25rem;
+  height: 7rem;
   z-index: 0;
   overflow: hidden;
 }
-
+/* 
 .main-image img {
   width: 110%;
   height: 100%;
   object-fit: cover;
   transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
-}
+} */
