add loading and error css

--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,16 @@
   padding: 0;
 }
 
+.MealsLoading {
+  color: #fff;
+  text-align: center;
+}
+
+.MealsError {
+  color: crimson;
+  text-align: center;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
