--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -10,15 +10,17 @@
 
 .modal {
   position: fixed;
-  top: 20vh;
+  top: 5vh;
   left: 5%;
   width: 90%;
+  height: 90%;
   background-color: white;
   padding: 1rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
+  overflow-y: scroll;
 }
 
 @media (min-width: 768px) {
@@ -30,11 +32,11 @@
 
 @keyframes slide-down {
   from {
-    opacity: 0;
+    /* opacity: 0; */
     transform: translateY(-3rem);
   }
   to {
-    opacity: 1;
+    /* opacity: 1; */
     transform: translateY(0);
   }
 }
